Header without animation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,52 @@
 </head>
 
 <body>
-  <h1>Hello From Football app.</h1>
+  <div class="container">
+    <!-- Header Section -->
+    <header class="header">
+      <div class="headerLeft">
+        <h1 class="headerLeft__title">Conmebol
+          Copa America
+          2021
+        </h1>
+        <button class="btn">Watch Live <i class="fas fa-arrow-right"></i></button>
+      </div>
+      <div class="headerRight">
+        <img src="./images/banner.png" alt="banner" class="headerRight__img">
+      </div>
+    </header>
+  </div>
+
+  <!-- Main Section -->
+  <main class="main">
+    <!-- Player Cards -->
+    <section class="playerCards">
+      <div class="playerCard">
+        Card 1
+      </div>
+      <div class="playerCard">
+        Card 2
+      </div>
+      <div class="playerCard">
+        Card 3
+      </div>
+    </section>
+
+    <!-- Highlights Section -->
+    <section class="highlights">
+      <div class="highlightLeft">
+        Left highlight
+      </div>
+      <div class="highlightRight">
+        Right highlight
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    Footer
+  </footer>
 </body>
 
 </html>
