Player Section and highlight section

--- a/index.html
+++ b/index.html
@@ -44,23 +44,91 @@
     <!-- Player Cards -->
     <section class="playerCards">
       <div class="playerCard">
-        Card 1
+        <img src="./images/players/player-1.png" alt="player - 1" class="playerCard__img">
+        <h2 class="playerCard__name">Neymar Jr</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
       </div>
       <div class="playerCard">
-        Card 2
+        <img src="./images/players/player-2.png" alt="player - 2" class="playerCard__img">
+        <h2 class="playerCard__name">Lionel Messi</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
       </div>
       <div class="playerCard">
-        Card 3
+        <img src="./images/players/player-3.png" alt="player - 3" class="playerCard__img">
+        <h2 class="playerCard__name">Cristiano Ronaldo</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-4.png" alt="player - 4" class="playerCard__img">
+        <h2 class="playerCard__name">Paulo Dybala</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-5.png" alt="player - 5" class="playerCard__img">
+        <h2 class="playerCard__name">Mesut Ozil</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-6.png" alt="player - 6" class="playerCard__img">
+        <h2 class="playerCard__name">Mauro Icardi</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-7.png" alt="player - 7" class="playerCard__img">
+        <h2 class="playerCard__name">Di Maria</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-8.png" alt="player - 8" class="playerCard__img">
+        <h2 class="playerCard__name">Kylian Mbappé</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-9.png" alt="player - 9" class="playerCard__img">
+        <h2 class="playerCard__name">Mohamed Salah</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-10.png" alt="player - 10" class="playerCard__img">
+        <h2 class="playerCard__name">Harry Kane</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-11.png" alt="player - 11" class="playerCard__img">
+        <h2 class="playerCard__name">Kevin De Bruyne</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
+      </div>
+      <div class="playerCard">
+        <img src="./images/players/player-12.png" alt="player - 12" class="playerCard__img">
+        <h2 class="playerCard__name">Philippe Coutinho</h2>
+        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
+          magni, ab voluptatum!</p>
       </div>
     </section>
 
     <!-- Highlights Section -->
     <section class="highlights">
       <div class="highlightLeft">
-        Left highlight
+        <h2 class="highlightLeft__title">All Highlights <br>
+          Copa America 2021</h2>
+        <p class="highlightLeft__details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem
+          consequatur dolorem vero, incidunt officia error laudantium quaerat quod aliquid enim rem pariatur assumenda
+          nulla.</p>
+        <button class="btn">Watch Now <i class="fas fa-arrow-right"></i></button>
       </div>
       <div class="highlightRight">
-        Right highlight
+        <img src="./images/match.png" alt="Messi photo" class="highlightRight__img">
       </div>
     </section>
   </main>
