Footer section completed

--- a/index.html
+++ b/index.html
@@ -135,7 +135,14 @@
 
   <!-- Footer -->
   <footer class="footer">
-    Footer
+    <img src="./images/Logo.png" alt="Logo" class="footer__img">
+    <div class="footer__logos">
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-dribbble"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-youtube"></i>
+    </div>
+    <p class="footer__copyright">Copyright &copy; 2021 by Mostakimul Karim</p>
   </footer>
 </body>
 
