Newsletter section completed

--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
       </div>
     </section>
 
+    <!-- Newsletter section -->
+    <section class="newsletter">
+      <h2 class="newsletter__title">Subscribe To Our Newsletter</h2>
+      <div class="newsletterLeft">
+        <input type="email" name="email" id="email" class="newsletterLeft__input">
+      </div>
+      <div class="newsletterRight">
+        <button class="btn">Subscribe Now</button>
+      </div>
+    </section>
+
     <!-- Highlights Section -->
     <section class="highlights">
       <div class="highlightLeft">
@@ -131,6 +142,12 @@
         <img src="./images/match.png" alt="Messi photo" class="highlightRight__img">
       </div>
     </section>
+
+    <!-- Latest videos -->
+    <section class="videos">
+      Latest videos
+    </section>
+
   </main>
 
   <!-- Footer -->
