video section added

--- a/index.html
+++ b/index.html
@@ -145,7 +145,25 @@
 
     <!-- Latest videos -->
     <section class="videos">
-      Latest videos
+      <h2 class="videos__title">Latest Videos</h2>
+      <div class="video">
+        <iframe width="100%" height="250px" src="https://www.youtube.com/embed/6tLxv5EsszA" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+      <div class="video">
+        <iframe width="100%" height="250px" src="https://www.youtube.com/embed/aTdLQ5iN4uw" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+      <div class="video">
+        <iframe width="100%" height="250px" src="https://www.youtube.com/embed/aXKwoWKWahU" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
     </section>
 
   </main>
