some css and button fix

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           Copa America <br>
           2021
         </h1>
-        <button class="btn">Watch Live <i class="fas fa-arrow-right"></i></button>
+        <a href="#" class="btn">Watch Live <i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="headerRight">
         <img src="./images/banner.png" alt="banner" class="headerRight__img">
@@ -124,7 +124,7 @@
         <input type="email" name="email" id="email" class="newsletterLeft__input">
       </div>
       <div class="newsletterRight">
-        <button class="btn">Subscribe Now</button>
+        <a href="#" class="btn">Subscribe Now</a>
       </div>
     </section>
 
@@ -136,7 +136,7 @@
         <p class="highlightLeft__details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem
           consequatur dolorem vero, incidunt officia error laudantium quaerat quod aliquid enim rem pariatur assumenda
           nulla.</p>
-        <button class="btn">Watch Now <i class="fas fa-arrow-right"></i></button>
+        <a href="#" class="btn">Watch Now <i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="highlightRight">
         <img src="./images/match.png" alt="Messi photo" class="highlightRight__img">
