Text added for all cards

--- a/index.html
+++ b/index.html
@@ -46,74 +46,78 @@
       <div class="playerCard">
         <img src="./images/players/player-1.png" alt="player - 1" class="playerCard__img">
         <h2 class="playerCard__name">Neymar Jr</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Neymar junior is one of the best football player from Brasil and currently
+          playing
+          at PSG as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-2.png" alt="player - 2" class="playerCard__img">
         <h2 class="playerCard__name">Lionel Messi</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Lionel Messi is one of the best football player from Argentina and currently
+          playing
+          at Barcelona FC as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-3.png" alt="player - 3" class="playerCard__img">
         <h2 class="playerCard__name">Cristiano Ronaldo</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Cristiano Ronaldo is one of the best football player from Portugal and currently
+          playing
+          at Juventus as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-4.png" alt="player - 4" class="playerCard__img">
         <h2 class="playerCard__name">Paulo Dybala</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Paulo Dybala is one of the best football player from Argentina and currently
+          playing
+          at Juventus as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-5.png" alt="player - 5" class="playerCard__img">
         <h2 class="playerCard__name">Mesut Ozil</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Mesut Ozil is one of the best football player from Germany and currently playing
+          at one of the Turkish club as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-6.png" alt="player - 6" class="playerCard__img">
         <h2 class="playerCard__name">Mauro Icardi</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Mauro Icardi is one of the best striker from Argentina and currently playing
+          at PSG as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-7.png" alt="player - 7" class="playerCard__img">
         <h2 class="playerCard__name">Di Maria</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Di Maria is one of the best player from Argentina and currently playing
+          at PSG as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-8.png" alt="player - 8" class="playerCard__img">
         <h2 class="playerCard__name">Kylian Mbappé</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Kylian Mbappé is one of the best player from France and currently playing
+          at PSG as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-9.png" alt="player - 9" class="playerCard__img">
         <h2 class="playerCard__name">Mohamed Salah</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Mohamed Salah is one of the best player from Egypt and currently playing
+          at Liverpool as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-10.png" alt="player - 10" class="playerCard__img">
         <h2 class="playerCard__name">Harry Kane</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Harry Kane is one of the best player from England and currently playing
+          at Tottenham as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-11.png" alt="player - 11" class="playerCard__img">
         <h2 class="playerCard__name">Kevin De Bruyne</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Kevin De Bruyne is one of the best player from Belgium and currently playing
+          at Manchester as regular player.</p>
       </div>
       <div class="playerCard">
         <img src="./images/players/player-12.png" alt="player - 12" class="playerCard__img">
         <h2 class="playerCard__name">Philippe Coutinho</h2>
-        <p class="playerCard__details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero placeat minus
-          magni, ab voluptatum!</p>
+        <p class="playerCard__details">Philippe Coutinho is one of the best player from Brasil and currently playing
+          at Bayern Munich as regular player.</p>
       </div>
     </section>
 
@@ -133,9 +137,9 @@
       <div class="highlightLeft">
         <h2 class="highlightLeft__title">All Highlights <br>
           Copa America 2021</h2>
-        <p class="highlightLeft__details">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel exercitationem
-          consequatur dolorem vero, incidunt officia error laudantium quaerat quod aliquid enim rem pariatur assumenda
-          nulla.</p>
+        <p class="highlightLeft__details">Messi was born on June 24, 1987, in Rosario, Argentina. As a young boy, Messi
+          tagged along when his two older brothers played soccer with their friends, unintimidated by the bigger boys.
+          At the age of 8, he was recruited to join the youth system of Newell's Old Boys, a Rosario-based club.</p>
         <a href="#" class="btn">Watch Now <i class="fas fa-arrow-right"></i></a>
       </div>
       <div class="highlightRight">
